# cugbfreer

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  TODO  config.h.cmake
cmake/: FindGTK2.cmake
config/: cugbfreer.conf
locale/zh_CN/LC_MESSAGES/: cugbfreer.mo
po/: cugbfreer.pot  mo_update.sh  po_update.sh  zh_CN.po
src/: CMakeLists.txt  about.c  about.h  config.h  connection.c  connection.h  cugbfreer.h  interface.c  interface.h  keyfile.c  keyfile.h  linker.c  linker.h  main.c  main.h  makefile  misc.c  misc.h  tags  welcome.c  welcome.h
