# include gtk+-2.0
INCLUDE (UsePkgConfig)
FIND_PACKAGE (GTK)
PKGCONFIG (
    gtk+-2.0
    GTK2_INCLUDE_DIR
    GTK2_LINK_DIR
    GTK2_LINK_FLAGS
    GTK2_CFLAGS
    )
IF (GTK2_INCLUDE_DIR)
    SET (CMAKE_C_FLAGS ${CMAKE_C_FLAGS} ${GTK2_CFLAGS})
    STRING (REGEX REPLACE "-l" "" GTK_LIBRARIES ${GTK2_LINK_FLAGS})
    SEPARATE_ARGUMENTS (GTK_LIBRARIES)
ELSE (GTK2_INCLUDE_DIR)
    MESSAGE (SEND_ERROR "GTK2 required.")
ENDIF (GTK2_INCLUDE_DIR)

# set targets
SET (SRC_LIST main.c interface.c)
ADD_EXECUTABLE (cugbfreer ${SRC_LIST})
TARGET_LINK_LIBRARIES (cugbfreer ${GTK2_LINK_FLAGS})
INSTALL (TARGETS cugbfreer DESTINATION bin)
